# TTGF26b_Arrakeen_SPSRAM_direct_sramrules

./: .gitignore  README.md  config.yaml  info.yaml  main.py  pyproject.toml
.github/workflows/: gds.yaml
ci/: blackbox.v
docs/: info.md
pdn/: pdn_cfg.tcl
src/: behavioural.v  generate_layout.py  generate_views.py  template.py  top.py  tt_um_arrakeen_spsram_direct.v
