[project]
name = "tt-arrakeen-spsram-direct"
version = "0.1.0"
description = "Single port SRAM with pins connected directly to TT tile pins."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "c4m-flexcell",
    "c4m-pdk-gf180mcu>=0.0.11",
]

[dependency-groups]
dev = [
    "c4m-flexmem",
    "c4m-pdk-gf180mcu",
    "pdkmaster",
    "pdkmaster-io-coriolis>=0.1.0.post1",
    "pdkmaster-io-spice",
]

[tool.uv.sources]
pdkmaster = { git = "https://gitlab.com/Chips4Makers/PDKMaster", rev = "dev_SRAM" }
c4m-pdk-gf180mcu = { git = "https://gitlab.com/Chips4Makers/c4m-pdk-gf180mcu", rev = "dev" }
c4m-flexmem = { git = "https://gitlab.com/Chips4Makers/c4m-flexmem", rev = "dev_SRAM" }
pdkmaster-io-spice = { git = "https://gitlab.com/Chips4Makers/pdkmaster-io-spice", rev = "dev_SRAM" }
c4m-flexcell = { git = "https://gitlab.com/Chips4Makers/c4m-flexcell.git", rev = "dev" }
